# svroll

./: .eslintignore  .eslintrc  .prettierrc.ts  CLAUDE.md  LICENSE  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
public/: splashscreen.html
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: benchmark_param.rs  context.rs  lib.rs  main.rs  param.rs  state.rs
src-tauri/src/config/: basic.rs  mod.rs  types.rs
src-tauri/src/model/: connect_param.rs  database.rs  db_com.rs  mod.rs  task_com.rs  tauri_com.rs
src-tauri/src/mqtt/: basic.rs  client_data.rs  config.rs  device_data.rs  manager.rs  mod.rs
src-tauri/src/mqtt/hooks/: client_integration.rs  manager.rs  mod.rs  processor.rs  types.rs
src-tauri/src/task/: commands.rs  file_handler.rs  manager.rs  mod.rs  mqtt_handler.rs  tcp_handler.rs  types.rs  utils.rs
src-tauri/src/tcp/: manager.rs  mod.rs  modbus.rs  protocol_parser.rs  tcp_client.rs  tcp_client_data.rs  utils.rs
src-tauri/src/traits/: common.rs  mod.rs
src-tauri/src/utils/: file.rs  mod.rs
src/assets/styles/: common.scss  index.scss
src/assets/styles/element/: dark.scss  index.scss
src/components/: ThemeSwitch.vue
src/components/CodeEditor/: index.vue  monaco-loader.ts
src/components/Dashboard/: DashboardPanel.vue
src/components/History/: index.vue
src/components/ThemeSwitch/: index.vue
src/components/TitleBar/: index.vue
src/hooks/: processJsonStruct.ts
src/pages/: home.vue
src/pages/config/: BasicConfig.vue  ClientConfig.vue  DataModel.vue  NewConfig.vue  TabsConfig.vue
src/router/: index.ts
src/services/: configManager.ts  eventManager.ts  tauriService.ts  timerManager.ts
src/store/: index.ts
src/types/: global.d.ts  mqttConfig.ts
src/utils/: typeConverter.ts
vite/plugins/: auto-components.ts  auto-import.ts  index.ts  svg-icon.ts
