[package]
name = "svroll"
version = "0.1.0"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
csv = { version = "1.3" }
rand = "0.8.5"
dashmap = "6.0.1"
once_cell = "1.19"
chrono = "0.4.38"
bytes = "1.6.1"
anyhow = "1.0.86"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
hex = "0.4"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
rumqttc = "0.24.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "sqlite",
    "json",
    "chrono",
] }
async-trait = "0.1.88"
futures = "0.3.25"
futures-util = "0.3.25"
[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
