[package]
name = "svroll"
version = "0.1.0"
authors = ["you"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
csv = { version = "1.3" }
rand = "0.9.2"
dashmap = "6.0.1"
once_cell = "1.21.3"
chrono = "0.4.38"
bytes = "1.10.1"
anyhow = "1.0.99"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20" }
hex = "0.4"
tauri-plugin-fs = "2.4.2"
tauri-plugin-dialog = "2.4.0"
rumqttc = "0.25.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "sqlite",
    "json",
    "chrono",
] }
async-trait = "0.1.88"
futures = "0.3.25"
futures-util = "0.3.25"
mimalloc = { version = "*", features = ["secure"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
