[package]
name = "svroll"
version = "0.1.0"
authors = ["you"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["tray-icon", "image-ico", "image-png"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.143", default-features = false }
tokio = { version = "1.48.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
tokio-util = { version = "0.7.17", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
csv = { version = "1.4.0", default-features = false }
rand = { version = "0.9.2", default-features = false, features = [
    "thread_rng",
] }
dashmap = { version = "6.0.1", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
bytes = "1.10.1"
anyhow = "1.0.99"
crc16 = "0.4.0"
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt"] }
hex = { version = "0.4" }
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"
rumqttc = { version = "0.25.0", default-features = false }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "json",
    "chrono",
] }
async-trait = "0.1.88"
futures = { version = "0.3.25", default-features = false }
futures-util = { version = "0.3.25", default-features = false }
mimalloc = { version = "*", features = ["secure"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
